worked on the ui responsiveness

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -11,7 +11,5 @@
 @import "components/social-icons";
 @import "components/skills";
 @import "components/portfolio";
-
-.photo {
-  height: 40vw;
-}
+@import "components/candidate";
+@import "components/space";
