--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -5,4 +5,8 @@
   &__img {
     @extend .img-fluid;
   }
+
+  @include media-breakpoint-down(sm) {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
 }
