--- a/src/scss/layouts/_navBar.scss
+++ b/src/scss/layouts/_navBar.scss
@@ -3,5 +3,17 @@
 
   &__brand {
     @extend .navbar-brand, .text-light, .mr-auto;
+
+    @include media-breakpoint-down(sm) {
+      color: $primary !important;
+      display: block;
+      margin: auto;
+    }
+  }
+
+  button {
+    @include media-breakpoint-down(sm) {
+      margin: auto;
+    }
   }
 }
